--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     list-style: none;
     scroll-behavior: smooth;
+    font-family: "Syne", sans-serif;
 }
 
 :root{
@@ -89,4 +90,163 @@ header{
     cursor: pointer;
     display: none;
     
+}
+
+section{
+    padding: 110px 14% 90px;
+}
+.home{
+    height: 100vh;
+    width: 100%;
+    background: url(../img/bg.png);
+    background-size: cover;
+    background-position: cover;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.home-text{
+    padding-top: 30px;
+}
+
+.h-line{
+    display: inline-block;
+    padding: 10px 14px;
+    background: transparent;
+    border: 1px solid var(--alt-color);
+    font-size: var(--p-fonts);
+    font-weight: 500;
+    color: var(--ann-color);
+    border-radius: 1.7rem;
+    transition: all .6s ease;
+}
+
+.h-line:hover{
+    color: var(--text-color);
+}
+
+.home-text h1{
+    margin: 20px 0;
+    font-size: var(--h1-fonts);
+}
+
+.home-text h1 span{
+    background: -webkit-linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.home-text h4{
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 35px;
+}
+
+.social-icons a{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    background: transparent;
+    border: 1px solid var(--alt-color);
+    border-radius: 1.7rem;
+    color: var(--ann-color);
+    font-size: 18px;
+    margin-right: 12px;
+    margin-bottom: 40px;
+    transition: all .6s ease;
+}
+
+.social-icons a:hover{
+    transform: scale(1.06) rotate3d(0,0,1,360deg);
+    color: var(--text-color);
+}
+
+.h-bt{
+    display: flex;
+    align-items: center;
+}
+
+.btn1{
+    display: inline-block;
+    padding: 18px 35px;
+    background: transparent;
+    border: 1px solid var(--alt-color);
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 17px;
+    margin-right: 20px;
+    transition: all .7s ease;
+}
+
+.btn1:hover{
+    letter-spacing: 1px;
+}
+
+.btn2{
+    display: inline-block;
+    padding: 18px 35px;
+    background: linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
+    color: var(--bg-color);
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 17px;
+    transition: all .7s ease;
+}
+
+.btn2:hover{
+    transform: scale(1.07);
+}
+
+header.sticky{
+    padding: 5px 14%;
+    background-color: transparent;
+    backdrop-filter: blur(25px);
+}
+
+.about{
+    background: var(--second-bg-color);
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    gap: 1rem;
+}
+
+.about-img img{
+    width: 100%;
+    height: 700px;
+    max-width: 550px;
+    border-radius: 20%;
+    object-fit: cover;
+    background: -webkit-linear-gradient(135deg, var(--main-color) 0%, #e1bac5 100%);
+    border: 5px solid var(--main-color);
+}
+
+.about-text h2{
+    margin: 22px 0;
+    font-size: var(--h2-fonts);
+}
+
+.about-text h2 span{
+    background: -webkit-linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.about-text h5{
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1.7;
+    margin-bottom: 30px;
+}
+
+.about-text p{
+    font-size: var(--p-fonts);
+    font-weight: 500;
+    line-height: 33px;
+    color: var(--ann-color);
+    margin-bottom: 35px;
 }
