Atualização botão texto cor errada

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body.darkmode{
     --alt-color: #4b4b51;
     --ann-color: #c7c6d3;
     --other: #ffffff;
-    --bar: porti;
+    --bar: #171717;;
 }
 
 .darkmode .dark{
