--- a/css/style.css
+++ b/css/style.css
@@ -526,6 +526,14 @@ header.sticky{
     transform: scale(1.1) translate3d(11px,0px,0px);
 }
 
+.tec img{
+    width: 50px;
+    border-radius: 10px;
+}
+.tec-css img{
+    width: 30px;
+}
+
 .contact{
     background: var(--second-bg-color);
 }
